[package]
name = "vjoy-wrapper"
description = "Rust Wrapper for vJoy."
version = "0.1.0"
authors = ["Alexandre Simoes Tavares"]
edition = "2018"

[dependencies]
variant_count = "1.1"
widestring = "0.4.3"

[build-dependencies]
bindgen = "0.58.1"

# TO REVIEW: Explore 'features' to allow using different version of vjoy
# Trigger error if features is deactivated
[features]
default = ["vjoy-218"]
vjoy-221 = []
vjoy-218 = []